name:                flappybird
version:             0.1.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable flappybird
  hs-source-dirs:      src
  other-modules:       UI, FlappyBird, Constants, UITypes, FlappyBirdTypes
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
