name:                flappybird
version:             0.1.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:        -W
  exposed-modules:    Constants,
                      FlappyBird,
                      UI,
                      FlappyBirdTypes,
                      UITypes
  build-depends:      base         >= 4.7 && < 5
                    , brick
                    , containers
                    , extra
                    , linear
                    , lens
                    , random
                    , transformers
                    , vty
                    , QuickCheck

  hs-source-dirs:      src
  default-language:    Haskell2010

executable flappybird
  hs-source-dirs:      src
  other-modules:       UI, FlappyBird, Constants, UITypes, FlappyBirdTypes
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
                     , QuickCheck

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  Default-Extensions: OverloadedStrings
  main-is:          Test.hs
  build-depends:    base, brick, containers, extra, linear, lens, random, transformers, vty,
                    filepath,
                    directory,
                    QuickCheck,
                    tasty,
                    tasty-hunit,
                    tasty-quickcheck,
                    process,
                    flappybird
